package com.bitworks.rtb.db.schema

/**
  * Database publisher category entity.
  *
  * @author Egor Ilchenko
  */
case class PublisherCategory(
    publisherId: Int,
    iabCategoryId: Int)
