package com.bitworks.rtb.service.dao.schema

/**
  * Database publisher blocked IAB category entity.
  *
  * @author Egor Ilchenko
  */
case class PublisherBlockedCategoryEntity(
    publisherId: Int,
    iabCategoryId: Int)
