package com.bitworks.rtb.service.dao.schema

/**
  * Database site IAB category entity.
  *
  * @author Egor Ilchenko
  */
case class SiteCategoryEntity(
    siteId: Int,
    iabCategoryId: Int)
